--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
-{
-  "cleanUrls": true,
+
+{ 
   "rewrites": [
-    {
-      "source": "/",
-      "destination": "/"
-    },
-    {
-      "source": "/owner",
-      "destination": "/owner.html"
+    { "source": "/(.*)", 
+    "destination": "/" 
     }
   ]
 }
